Fix issue with clicked on windows not being brought to foreground

--- a/Better Fullscreen/Better Fullscreen.vbproj
+++ b/Better Fullscreen/Better Fullscreen.vbproj
@@ -149,6 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Fullscreen.ico" />
+    <Content Include="Fullscreen_Light.ico" />
     <Content Include="ILMergeOrder.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
