add tool to convert ini to xml

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@
 ################################################################################
 
 .vs
-/Better Fullscreen/obj/Debug
-/Better Fullscreen/obj/Debug
-/Better Fullscreen/obj
+*/obj/Debug
+*/obj/Debug
+*/obj
